# Simultaneous-detection-and-estimation-in-olfactory-sensing

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.sh
cluster_script/: present_sweep_poisson.sl  present_sweep_poisson_sparse_binary.sl  present_sweep_slam.sl  present_sweep_slam_circuit.sl  present_sweep_slam_circuit_sparse_binary.sl  present_sweep_slam_dist.sl  present_sweep_slam_geom.sl  present_sweep_slam_sparse_binary.sl  sparsity_sweep_slam.sl  threshold_sweep_l1_poisson_dense_gamma.sl  threshold_sweep_l1_poisson_sparse_binary.sl  threshold_sweep_l1_poisson_sparse_gamma.sl  threshold_sweep_l1_slam_bernoulli_dense_gamma.sl  threshold_sweep_l1_slam_bernoulli_sparse_binary.sl  threshold_sweep_l1_slam_bernoulli_sparse_gamma.sl  threshold_sweep_l1_slam_ks_dense_gamma.sl  threshold_sweep_l1_slam_ks_sparse_binary.sl  threshold_sweep_l1_slam_ks_sparse_gamma.sl  threshold_sweep_poisson_dense_gamma.sl  threshold_sweep_poisson_sparse_binary.sl  threshold_sweep_poisson_sparse_gamma.sl  threshold_sweep_slam_bernoullil_dense_gamma.sl  threshold_sweep_slam_bernoullil_sparse_binary.sl  threshold_sweep_slam_bernoullil_sparse_gamma.sl  threshold_sweep_slam_ks_dense_gamma.sl  threshold_sweep_slam_ks_sparse_binary.sl  threshold_sweep_slam_ks_sparse_gamma.sl
configs/: gamma_sweep.yaml  present_sweep_poisson.yaml  present_sweep_poisson_sparse_binary.yaml  present_sweep_slam.yaml  present_sweep_slam_circuit.yaml  present_sweep_slam_circuit_sparse_binary.yaml  present_sweep_slam_dist.yaml  present_sweep_slam_geom.yaml  present_sweep_slam_sparse_binary.yaml  (+30 more)
(+57 files in other folders)
